--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.application.name =api-gateway
-server.port =8765
+spring.application.name=api-gateway
+server.port=8765
+## spring.cloud.gateway.discovery.locator.enabled=true
+## spring.cloud.gateway.discovery.locator.lowercaseServiceId=true
 
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lowercaseServiceId=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
